--- a/docs/s3.md
+++ b/docs/s3.md
@@ -58,3 +58,5 @@ Dynamic websites, such as those that require database connections, cannot be hos
 
 S3 scales automatically to meet demand.
 Many enterprises will put static websites on S3 when they think there is going to be a large number of requests e.g. a movie preview.
+
+An example of seeing a public static website on S3 in action is under [\<project root\>/terraform/s3](../terraform/s3)
