--- a/docs/s3.md
+++ b/docs/s3.md
@@ -30,14 +30,6 @@ S3 is a safe place to store files - The data is spread across multiple devices a
 - Availability: 99.95% to 99.99% service availability
 - Durability: 99.999999999% durability i.e. essentially you will never lose your data
 
-Tiers:
-- S3 Standard
-  - Default storage class, suitable for websites, content distribution, mobile and gaming applications, big data analytics
-  - High availability and durability
-  - Data is stored redundantly across multiple devices in multiple facilities (>= 3 AZs)
-  - 99.99% availability and 99.999999999% durability
-  - Designed for frequent access
-
 Securing your data:
 - Server-side encryption
   - You can set default encryption on a bucket to encrypt all new objects when they are stored in the bucket
@@ -60,3 +52,59 @@ S3 scales automatically to meet demand.
 Many enterprises will put static websites on S3 when they think there is going to be a large number of requests e.g. a movie preview.
 
 An example of seeing a public static website on S3 in action is under [\<project root\>/terraform/s3](../terraform/s3)
+
+## Versioning
+
+- All versions
+  - All versions of an object are stored in S3. This includes all writes and even if you delete an object.
+- Backup
+  - Can be a great backup tool.
+- Cannot be disabled
+  - Once enabled, versioning cannot be disabled, only suspended.
+- Lifecycle rules
+  - Can be integrated with lifecycle rules.
+- Supports MFA
+  - Can support multi-factor authentication.
+
+With versioning we can safely delete an object.
+When we delete an object, it will be marked with a `delete marker`, and in order to restore, we simply delete the `delete marker`.
+
+## Storage classes
+
+- S3 Standard
+  - Default storage class, suitable for websites, content distribution, mobile and gaming applications, big data analytics
+  - High availability and durability
+  - Data is stored redundantly across multiple devices in multiple facilities (>= 3 AZs)
+  - 99.99% availability and 99.999999999% durability
+  - Designed for frequent access
+- S3 Standard Infrequent Access (S3 Standard IA)
+  - Rapid access: Used for data that is accessed less frequently but requires rapid access when needed.
+  - You pay to access the data
+    - There is a low per-GB storage price and a per-GB retrieval fee.
+  - Use cases
+    - Great for long term storage, backups and as a data store for disaster recovery files.
+  - 99.9% availability
+  - 99.999999999% durability
+- S3 One Zone Infrequent Access
+  - Like S3 Standard IA but data is stored redundantly within a single AZ.
+  - Costs 20% less than regular S3 Standard IA.
+  - Great for long lived infrequently accessed non-critical data.
+  - 99.5% availability
+  - 99.999999999% durability
+- Glacier
+  - This is cheap storage.
+  - Optimised for data that is very infrequently accessed.
+  - You pay each time you access your data.
+  - Use only for archiving data.
+  - Option 1: Glacier
+    - Provides long term data archiving with retrieval times that range from 1 minute to 12 hours e.g. historical data only accessed a few times a year.
+  - Option 2: Glacier Deep Archive
+    - Archiving rarely accessed data with a default retrieval time of 12 hours e.g. financial records that may be accessed once or twice per year.
+  - 99.99% availability
+  - 99.999999999% durability
+- S3 Intelligent Tiering
+  - What if you don't know whether you will be accessing your data frequently or infrequently, and of course they may change over time?
+  - Intelligent tiering automatically moves your data to the most cost-effective tier based on how fequently you access each object.
+  - This is done via Machine Learning.
+  - 99.9% availability
+  - 99.999999999% durability
