--- a/docs/s3.md
+++ b/docs/s3.md
@@ -108,3 +108,55 @@ When we delete an object, it will be marked with a `delete marker`, and in order
   - This is done via Machine Learning.
   - 99.9% availability
   - 99.999999999% durability
+
+## Lifecyle management with S3
+
+What is lifecyle management?
+It automates moving your objects between the different storage tiers, thereby maximising cost effectiveness:
+
+```prettier
+S3 Standard         ------------>      S3 IA        ------------>     Glacier
+Keep for 30 days                    After 30 days                   After 90 days
+```
+
+You can use lifecycle management to move different versions of objects to different storage tiers.
+
+## S3 Object lock and Glacier vault lock
+
+- S3 Object Lock:
+  - You can use S3 Object Lock to store objects using a `write once, read many (WORM)` model.
+    It can help prevent objects from being deleted or modified for a fixed amount of time or indefinitely.
+  - You can use S3 Object Lock to meet regulatory requirements that require WORM storage, or add an extra layer of protection against object changes and deletion.
+  - Object Locks can be on individual objects or applied across the bucket as a whole.
+  - 2 different modes for S3 Object Lock:
+    - Governance mode:
+      - Users cannot overwrite or delete an object version or alter its lock settings unless they have special permissions.
+    - Compliance mode:
+      - A protected object version cannot be overwritten or deleted by any user, including the root user in your AWS account.
+  - Retention periods:
+    - Protects an object version for a fixed amount of time.
+      When you place a retention period on an object version, S3 stores a timestamp in the object version's metadata.
+  - Legal holds:
+    - S3 Object Lock also enables you to place a legal hold on an object version.
+      Like a retention period, a legal hold prevents an object version from being overwritten or deleted.
+      However, a legal hold doesn't have an associated retention period and remains in effect until removed by any user who has `s3:PutObjectLegalHold` permission.
+
+- Glacier Vault Lock:
+  - Allows you to deploy and enforce compliance controls for individual S3 Glacier vaults with a vault lock policy.
+  - Essentially apply a WORM model to Glacier.
+
+## Encrypting S3 objects
+
+- 3 types of encryption:
+  - Encryption in transit
+    - SSL/TLS
+    - HTTPS
+  - Encryption at rest - Server side encryption, 3 types which are:
+    - SSE-S3: S3 managed keys using AES 256 bit encryption
+    - SSE-KMS: AWS key management service
+    - SSE-C: Customer provided keys
+    - Then there are two ways to enforce server-side encryption:
+      - Console: Select the ecryption setting on your S3 bucket (a checkbox)
+      - Bucket policy: You can enforce encryption using a bucket policy e.g. deny any `PUT` of a file upload request that does not include the header `x-amz-server-side-encryption`
+  - Encryption at rest - Client side encryption:
+    - You encrypt the files yourself before you upload them to S3
