--- a/docs/s3.md
+++ b/docs/s3.md
@@ -51,7 +51,7 @@ Dynamic websites, such as those that require database connections, cannot be hos
 S3 scales automatically to meet demand.
 Many enterprises will put static websites on S3 when they think there is going to be a large number of requests e.g. a movie preview.
 
-An example of seeing a public static website on S3 in action is under [\<project root\>/terraform/s3](../terraform/s3)
+An example of seeing a public static website on S3 in action is under [\<project root\>/terraform/s3/website](../terraform/s3/website)
 
 ## Versioning
 
@@ -160,3 +160,39 @@ You can use lifecycle management to move different versions of objects to differ
       - Bucket policy: You can enforce encryption using a bucket policy e.g. deny any `PUT` of a file upload request that does not include the header `x-amz-server-side-encryption`
   - Encryption at rest - Client side encryption:
     - You encrypt the files yourself before you upload them to S3
+
+## Optimise S3 performance
+
+What is a S3 prefix? It's the part between the bucket name and file name e.g.
+> bucket-name`/folder1/subfolder1`/my-file.jpg so the prefix is `/folder1/subfolder1`
+
+So the prefix is essentially the folder names.
+
+The more prefixes the better the performance.
+You get better performance by spreading your reads across different prefixes e.g.
+- 2 prefixes -> 11,000 requests per second
+- 4 prefixes -> 22,000 requests per second
+
+S3 limitations when using KMS (Key Management Service, Amazon's encryption service):
+- If you are using SSE-KMS to encrypt your objects in S3, you must keep in mind the KMS limits, which are (in different regions) 5,500, 10,100, or 30,000 requets per second.
+- When you upload a file, you will call `GenerateDataKey` in the KMS API.
+- When you download a file, you will call `Decrypt` in the KMS API.
+
+S3 performance for uploads:
+- Multipart uploads
+  - Recommended for files over 100MB
+  - Required for files over 5GB
+  - Parallelise uploads increases efficiency
+
+S3 performance for downloads:
+- S3 byte-range fetches
+  - Parallelise downloads by specifying byte ranges
+  - If there's a failure in the download, it's only for a specific byte range
+
+## Backing up data with S3 Replication
+
+- You can replicate objects from one bucket to another - versioning must be enabled on both source and destination buckets.
+- Objects in an existing bucket are not replicated automatically - one replication is switched on, all subsequent updated obects will be replicated automatically.
+- By default, delete markers are not replicated.
+
+An example of replication in action is under [\<project root\>/terraform/s3/replication](../terraform/s3/replication)
