EC2 proxy to run AWS CLI

--- a/docs/s3.md
+++ b/docs/s3.md
@@ -1,4 +1,7 @@
-# S3
+# S3 - Simple Storage Service
+
+S3 bucket names must be globally unique.
+One practise is to append a bucket name with the account ID e.g. `my-bucket-8835-0987-4321`.
 
 - Object storage
   - S3 provides secure, durable, highly scalable object storage
@@ -52,6 +55,41 @@ S3 scales automatically to meet demand.
 Many enterprises will put static websites on S3 when they think there is going to be a large number of requests e.g. a movie preview.
 
 An example of seeing a public static website on S3 in action is under [\<project root\>/terraform/s3/website](../terraform/s3/website)
+
+```
+┌───────────────────────────────────────────────────────────────────────────────┐
+│ AWS Cloud                                                                     │
+│                                                                               │
+│        ┌───────────────────────────────────────────────────────────────────┐  │
+│        │Amazon S3                                                          │  │
+│        │                                                     ┌──────────┐  │  │
+│        │                                         ┌──────────►│index.html│  │  │
+│        │                                         │           └──────────┘  │  │
+│        │                                         │                         │  │
+│        │            ┌──────┐            ┌────────┴┐                        │  │
+│        │            │Bucket├───────────►│my-bucket│                        │  │
+│        │            │Policy│            └────────┬┘                        │  │
+│        │            └──────┘                 ▲   │                         │  │
+│        │                                     │   │           ┌───────────┐ │  │
+│        │                                     │   └──────────►│error.html │ │  │
+│        │                                     │               └───────────┘ │  │
+│        │                                     │                             │  │
+│        │                                     │                             │  │
+│        └─────────────────────────────────────┼─────────────────────────────┘  │
+│                                              │                                │
+└──────────────────────────────────────────────┼────────────────────────────────┘
+                                               │
+                                          ┌────┴────┐
+                                ┌────────►│internet │◄──────────────────┐
+                                │         └─────────┘                   │
+                                │                                       │
+                                │                                       │
+                          ┌─────┴─────┐        ┌────────────────────────┴───────────────────────────┐
+                          │AWS General│        │http://my-bucket.s3-website-us-east-1.amazonaws.com │
+                          │User       │        │       Bucket               Region                  │
+                          └───────────┘        │       name                 name                    │
+                                               └────────────────────────────────────────────────────┘
+```
 
 ## Versioning
 
@@ -114,7 +152,7 @@ When we delete an object, it will be marked with a `delete marker`, and in order
 What is lifecyle management?
 It automates moving your objects between the different storage tiers, thereby maximising cost effectiveness:
 
-```prettier
+```
 S3 Standard         ------------>      S3 IA        ------------>     Glacier
 Keep for 30 days                    After 30 days                   After 90 days
 ```
